# ACIT4030-Project

./: .gitignore  LICENSE  README.md  main.py  pointnetclass.py  pyproject.toml  train_classification.py
log/classification/pointnetPlusPlus_cls/: utils.py
src/: data_utils.py  dataloader.py  pointnetPlusPlusTrainer.py  pointnetTrainer.py  train_classification.py  trainer.py  utils.py  visualization.py
src/benchmark/: tests.py
src/pointnet/: pointnet.py  trainer.py  utils.py
src/pointnetPlusPlus/: data_utils.py  models.py  pointnetPlusPlus.py  utils.py
src/utils/: data_utils.py
