[tool.poetry]
name = "acit4030-project"
version = "0.1.0"
description = "Implementation of Pointnet in python 3.11"
authors = ["BuzzCraft <theools@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pathlib = "^1.0.1"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
